# GMR

./: .gitignore  BUILDING_WEB.md  BUILDING_WINDOWS.md  BUILDING_WSL.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  VERIFICATION_GUIDE.md  bootstrap.sh  build.bat  build.sh  compile_commands.json  engine.json  env.sh  setup.bat  setup.sh  test_error_handling.rb
cli/: gmrcli.gemspec  nul
cli/lib/: gmrcli.rb
cli/lib/gmrcli/: error_codes.rb  errors.rb  protocol.rb  version.rb
cli/lib/gmrcli/commands/: build.rb  bump.rb  docs.rb  new.rb  run.rb  setup.rb
cli/lib/gmrcli/helpers/: json_emitter.rb  platform.rb  shell.rb  ui.rb
cli/lib/gmrcli/output/: emitter.rb  envelope.rb  human.rb
cmake/: CompileScripts.cmake  GenerateAPIDocs.cmake  ReadEngineVersion.cmake
docs/: README.md  animation.md  audio.md  camera.md  console.md  engine-model.md  game-loop.md  getting-started.md  graphics.md  input.md  persistence.md  platformer-tutorial.md  scenes.md  state-machine.md  transforms.md  troubleshooting.md
docs/advanced/: README.md  bytecode.md  ide-integration.md  project-structure.md
docs/api/: README.md  audio.md  camera.md  collision.md  core.md  gmr_scene.md  gmr_scenemanager.md  graphics.md  input.md  node.md  sprite.md  system.md  texture.md  tilemap.md  time.md  transform.md  types.md  window.md
docs/api/cli/: README.md
docs/api/engine/: README.md
docs/api/engine/animation/: README.md  spriteanimation.md  tween.md
docs/api/engine/audio/: README.md  sound.md
docs/api/engine/console/: README.md
docs/api/engine/graphics/: README.md  camera2d.md  font.md  graphics.md  sprite.md  texture.md  tilemap.md
docs/api/engine/input/: README.md  input.md
docs/api/engine/scene/: README.md  node.md  transform2d.md
docs/api/engine/state-machine/: README.md  statemachine.md
docs/api/engine/utilities/: README.md  collision.md  system.md  time.md  window.md
docs/api/types/: README.md  rect.md  vec2.md  vec3.md
docs/cli/: README.md  build.md  bump.md  cmake-presets.md  dev.md  docs.md  error-codes.md  new.md  output-formats.md  project.md  run.md  setup.md  start.md
docs/html/: audio.html  collision.html  gmr_scene.html  gmr_scenemanager.html  graphics.html  index.html  node.html  sprite.html  styles.css  system.html  window.html
docs/html/api/: audio.html  camera.html  collision.html  core.html  graphics.html  index.html  input.html  sprite.html  styles.css  system.html  texture.html  tilemap.html  transform.html  types.html  window.html
docs/html/cli/: build.html  bump.html  dev.html  docs.html  error-codes.html  index.html  new.html  setup.html  start.html  styles.css
engine/language/: api.json  syntax.json  version.json
game/assets/data/: test_save.json
game/scripts/: file_io.rb.backup  main.rb  main.rb.backup  stress_test.rb.backup  util.rb
game/scripts/engine/: console.rb
game/scripts/scenes/: game_scene.rb  minimap_overlay.rb
game/web/: minshell.html  shell.html
include/gmr/: camera.hpp  draw_queue.hpp  engine.hpp  node.hpp  paths.hpp  scene.hpp  sprite.hpp  state.hpp  transform.hpp  types.hpp
include/gmr/animation/: animation_manager.hpp  animator.hpp  easing.hpp  sprite_animation.hpp  tween.hpp
include/gmr/bindings/: animator.hpp  audio.hpp  binding_data_types.hpp  binding_helpers.hpp  camera.hpp  collision.hpp  console.hpp  ease.hpp  filesystem.hpp  graphics.hpp  input.hpp  json.hpp  math.hpp  node.hpp  scene.hpp  serializable.hpp  sprite.hpp  sprite_animation.hpp  state_machine.hpp  storage.hpp  transform.hpp  tween.hpp  util.hpp  window.hpp
include/gmr/console/: console_module.hpp
include/gmr/debug/: breakpoint_manager.hpp  debug_hooks.hpp  debug_server.hpp  debug_state.hpp  json_protocol.hpp  variable_inspector.hpp
include/gmr/event/: event.hpp  event_queue.hpp
include/gmr/filesystem/: operations.hpp  paths.hpp
include/gmr/input/: input_context.hpp  input_event.hpp  input_manager.hpp
include/gmr/output/: ndjson.hpp
include/gmr/repl/: multiline_detector.hpp  output_capture.hpp  repl_session.hpp
include/gmr/resources/: font_manager.hpp  music_manager.hpp  resource_manager.hpp  sound_manager.hpp  texture_manager.hpp  tilemap_manager.hpp
include/gmr/scripting/: helpers.hpp  loader.hpp  script_error.hpp
include/gmr/state_machine/: state_machine.hpp  state_machine_manager.hpp
release/game/assets/data/: test_config.json  test_text.txt
release/game/scripts/: main.rb  main.rb.backup
release/game/web/: shell.html
release/web/: gmr.html  gmr.js
scripts/: main.rb
scripts/engine/: console.rb
src/: camera.cpp  draw_queue.cpp  main.cpp  node.cpp  scene.cpp  sprite.cpp  state.cpp  transform.cpp
src/animation/: animation_manager.cpp  easing.cpp
src/bindings/: animator.cpp  audio.cpp  binding_helpers.cpp  camera.cpp  collision.cpp  console.cpp  ease.cpp  filesystem.cpp  graphics.cpp  input.cpp  json.cpp  math.cpp  node.cpp  scene.cpp  serializable.cpp  sprite.cpp  sprite_animation.cpp  state_machine.cpp  storage.cpp  storage_impl.hpp  transform.cpp  tween.cpp  util.cpp  window.cpp
src/console/: console_module.cpp
src/debug/: breakpoint_manager.cpp  debug_hooks.cpp  debug_server.cpp  debug_state.cpp  json_protocol.cpp  variable_inspector.cpp
src/event/: event_queue.cpp
src/filesystem/: operations.cpp  paths.cpp
src/input/: input_context.cpp  input_manager.cpp
src/output/: ndjson.cpp
src/repl/: multiline_detector.cpp  output_capture.cpp  repl_session.cpp
src/resources/: font_manager.cpp  music_manager.cpp  sound_manager.cpp  texture_manager.cpp  tilemap_manager.cpp
src/scripting/: helpers.cpp  loader.cpp  script_error.cpp
src/state_machine/: state_machine_manager.cpp
tools/: generate_api_docs.rb  generate_cli_docs.rb
web/: shell.html
